--- a/Index.html
+++ b/Index.html
@@ -11,5 +11,6 @@
     <h2 id="test_status"></h2>
     <div id="test"></div>
     <div style="font-weight: bold" id="quiz-time-left"></div>
+    <div id="quize-time-left">Time Remaining</div>
 </body>
 </html>
