--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+
   
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +12,7 @@
     <h2 id="test_status"></h2>
     <div id="test"></div>
     <div style="font-weight: bold" id="quiz-time-left"></div>
-    <div id="quize-time-left">Time Remaining</div>
+    <div id="count"></div>
+    <div onload="setTimeout(Timer,15000)">Time Remaining</div>
 </body>
 </html>
